src/objects/SFDC_Issue__c.object
<CustomObject>
    <description>Issue related to a Project</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Browsers_Impacted__c</fullName>
        <label>Browsers Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firefox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrome</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Set_Id__c</fullName>
        <description>The Change Set deployed that fixes this issue</description>
        <externalId>true</externalId>
        <label>Change Set Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Comment__c</fullName>
        <description>Comments from the Development Team</description>
        <label>Developer Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Private_Notes__c</fullName>
        <description>Notes available to the System Team, not available to user</description>
        <inlineHelpText>Notes available to the Development and Support team only. Not available to Users</inlineHelpText>
        <label>Developer Private Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Reproducable__c</fullName>
        <label>Is Reproducable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermittent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Detail__c</fullName>
        <inlineHelpText>How to replicate the issue, which browser versions are affected, which users are affected, specific data that triggers the issue, differences between expected and actual behaviour. Include a URL to the affected page is possible.</inlineHelpText>
        <label>Issue Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Severity__c</fullName>
        <label>Issue Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1- Blocker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Trivial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Test_Status__c</fullName>
        <label>Test Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reopen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Description__c</fullName>
        <description>Description of the Issue in detail.</description>
        <label>Issue Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Name__c</fullName>
        <label>Issue Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Priority__c</fullName>
        <label>Issue Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Issue_Status__c</fullName>
        <label>Issue Status</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Being Addressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - In Escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99 - Not an Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Project__c</fullName>
        <description>Issues are details of the master project record</description>
        <label>Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Project_Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>SFDC_Sub_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Project</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Select a sub project from the selected project</errorMessage>
            <filterItems>
                <field>$Source.SFDC_Project__c</field>
                <operation>equals</operation>
                <valueField>SFDC_Sub_Project__c.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SFDC_Sub_Project__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Steps_to_Reproduce__c</fullName>
        <label>Steps to Reproduce</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assigned to member of the Test Team</inlineHelpText>
        <label>Assigned Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues_Tester</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Comments__c</fullName>
        <label>Test Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000023TWsEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SFDC_Project__c</columns>
        <columns>SFDC_Sub_Project__c</columns>
        <columns>NAME</columns>
        <columns>SFDC_Issue_Name__c</columns>
        <columns>SFDC_Issue_Status__c</columns>
        <columns>SFDC_Issue_Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_By_Date</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>SFDC_Issue_Status__c</columns>
        <columns>SFDC_Issue_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All By Date</label>
    </listViews>
    <listViews>
        <fullName>DF_Open_Issues</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>SFDC_Issue_Name__c</columns>
        <columns>SFDC_Issue_Description__c</columns>
        <columns>Issue_Detail__c</columns>
        <columns>SFDC_Issue_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFDC_Issue_Status__c</field>
            <operation>equals</operation>
            <value>0 - Open,1 - Being Addressed,2 - In Escalation</value>
        </filters>
        <filters>
            <field>SFDC_Project__c</field>
            <operation>equals</operation>
            <value>Dementia Friends Web Site</value>
        </filters>
        <label>Dementia Friends Open Issues</label>
    </listViews>
    <listViews>
        <fullName>Dementia_Friends_Closed</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Issue_Name__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFDC_Project__c</field>
            <operation>contains</operation>
            <value>Dementia Friends</value>
        </filters>
        <filters>
            <field>SFDC_Issue_Status__c</field>
            <operation>equals</operation>
            <value>3 - Closed</value>
        </filters>
        <label>Dementia Friends - Closed</label>
    </listViews>
    <listViews>
        <fullName>Open_Issues</fullName>
        <columns>SFDC_Project__c</columns>
        <columns>NAME</columns>
        <columns>SFDC_Issue_Status__c</columns>
        <columns>SFDC_Issue_Name__c</columns>
        <columns>SFDC_Issue_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFDC_Issue_Status__c</field>
            <operation>equals</operation>
            <value>0 - Open,1 - Being Addressed,2 - In Escalation</value>
        </filters>
        <label>Open Issues</label>
    </listViews>
    <listViews>
        <fullName>Open_Issues_By_Date</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>SFDC_Project__c</columns>
        <columns>SFDC_Sub_Project__c</columns>
        <columns>SFDC_Issue_Name__c</columns>
        <columns>SFDC_Issue_Description__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFDC_Issue_Status__c</field>
            <operation>equals</operation>
            <value>0 - Open,1 - Being Addressed,2 - In Escalation</value>
        </filters>
        <label>Open Issues By Date</label>
    </listViews>
    <nameField>
        <displayFormat>ISS - {0000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>